fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,3 +56,7 @@ a:hover{
     transition-property: color;
     transition-duration: 4s;
 }
+
+.fill-in{
+    padding-left: 40px;
+}
